2001-07-11  Phil Edwards  <pme@sources.redhat.com>

	* docs/doxygen/run_doxygen:  Don't keep output from previous run.
	* docs/doxygen/user.cfg.in:  Tweaks.
	* include/bits/c++config:  Documentation comments for Doxygen.
	* include/bits/char_traits.h:  Likewise.
	* include/bits/limits_generic.h:  Likewise.
	* include/bits/std_stdexcept.h:  Likewise.
	* include/bits/stl_pair.h:  Likewise.
	* libsupc++/exception:  Likewise.
	* libsupc++/new:  Likewise.
	* libsupc++/typeinfo:  Likewise.
	* libmath/Makefile.am:  Update and correct copyright.

2001-07-10  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

        * acinclude.m4: Don't AC_REPLACE_MATHFUNCS expf and atan2f.
        * aclocal.m4: Regenerate.
        * configure: Same.
	
2001-07-09  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/configopts.html:  Fix thinko.
	* docs/html/27_io/howto.html:  Fix thinko and HTML markup.
	* include/bits/stl_iterator.h:  Fix typo.

2001-07-09  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/explanations.html:  New file.
	* docs/html/configopts.html:  Link to it to provide more notes
	on cstdio.  Minor markup and spacing fixes.
	* docs/html/27_io/howto.html:  Talk about sync_with_stdio.

2001-07-09  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* include/bits/valarray_meta.h (_Expr::operator+): Use qualified id
	for _Expr template template argument.
	(_Expr::operator-): Likewise.
	(_Expr::operator~): Likewise.
	(_Expr::operator!): Likewise.
	(_DEFINE_EXPR_UNARY_OPERATOR): Likewise.

2001-07-06  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* libmath/Makefile.am (EXTRA_DIST): Remove atan2f.c and expf.c
	* libmath/Makefile.in: Regenerate.
	* libmath/expf.c: Remove.
	* libmath/atan2f.c: Likewise.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Protect variable from shell
	expansion (thanks to Alexandre Oliva).
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>
