@@ -1,3 +1,9 @@
+2001-07-11   Felix Natter  <fnatter@gmx.net>
+
+	* docs/html/17_intro/porting-howto.xml:  Initial checkin of
+	master copy.
+	* docs/html/17_intro/porting-howto.html:  check in v0.9.3
+
 2001-07-11  Phil Edwards  <pme@sources.redhat.com>
 
 	* docs/doxygen/run_doxygen:  Don't keep output from previous run.
